<resources>
    <string name="app_name">CoviMedsf</string>
    <string name="first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="normal">normal</string>
    <string name="chronic">chronic</string>
    <string name="pregnant">pregnant</string>
    <string name="age">enter your age</string>
    <string name="address">adreese</string>
    <string name="message">message</string>
    <string name="sumbit">submit</string>
    <string name="msg">Take Care of your self</string>
    <string name="msg1">"We will call you "</string>
    <string name="login">login</string>

</resources>