<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3BCEF"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="459dp"
        android:layout_margin="30dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="First name : "
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Last Name : "
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Last_name" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="Patient condition : "
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/normal"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/normal" />

            <CheckBox
                android:id="@+id/chronic"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="@string/chronic" />

            <CheckBox
                android:id="@+id/pregnant"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/pregnant" />

        </LinearLayout>

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:hint="@string/message" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/sumbit" />

    </LinearLayout>



</LinearLayout>



